--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "http://atmosmaciel.dev/"
+baseurl = "https://atmosmaciel.com/"
 title = "Atmos Maciel"
 theme = "hello-friend-ng"
 languageCode = "pt-br"
