--- a/config.toml
+++ b/config.toml
@@ -1,11 +1,14 @@
 baseurl = "localhost:1313"
 title = "Atmos Maciel"
-theme = "hello-friend-ng"
+theme = "hello-friend"
 languageCode = "en-US"
 paginate = 10
 disqusShortname = "atmosmps"
 rssLimit = 10  # Maximum number of items in the RSS feed.
 copyright = "This work is licensed under a Creative Commons Attribution-NonCommercial 4.0 International License." # This message is only used by the RSS template.
+
+[permalinks]
+  posts = "/posts/:year/:month/:title/"
 
 [author]
   name = "Atmos Maciel"
@@ -33,10 +36,11 @@ copyright = "This work is licensed under a Creative Commons Attribution-NonComme
   # Metadata mostly used in document's head
   description = "Vi veri vniversvm vivvs vici."
   keywords = "#tech #dev #science #astronomy #books #blackmusic #running #chess #poker #guitar"
-  images = [""]
+  #images = [""]
 
   # Default theme "light" or "dark"
   defaultTheme = "dark"
+  #themeColor = "#252627"
 
   # Social icons
   [[params.social]]
@@ -63,30 +67,27 @@ copyright = "This work is licensed under a Creative Commons Attribution-NonComme
   [languages.en]
     title = "Atmos Maciel"
     subtitle = "Vi veri vniversvm vivvs vici."
-    keywords = ""
+    #keywords = ""
     copyright = '<a href="https://creativecommons.org/licenses/by-nc/4.0/" target="_blank" rel="noopener">CC BY-NC 4.0</a>'
     readOtherPosts = "Read other posts"
 
     [languages.en.params.logo]
       logoText = "/atmosmps"
-      logoHomeLink = "/"
-    # or
-    #
-    # path = "/img/your-example-logo.svg"
-    # alt = "Your example logo alt text"
+      #logoHomeLink = "/"
+      #or
+      #path = "/img/your-example-logo.svg"
+      #alt = "Your example logo alt text"
 
 # And you can even create generic menu
 [menu]
-  #[[menu.main]]
-  #  identifier = "posts"
-  #  name       = "Posts"
-  #  url        = "posts/"
-
   [[menu.main]]
     identifier = "about"
     name       = "About"
-    url        = "/about/"
-
+    url        = "about/"
+  [[menu.main]]
+    identifier = "posts"
+    name       = "Posts"
+    url        = "posts/"
   #[[menu.main]]
   #  identifier = "projects"
   #  name       = "Projects"
