--- a/config.toml
+++ b/config.toml
@@ -1,11 +1,18 @@
 baseurl = "/"
 title = "Atmos Maciel"
-theme = "hello-friend-ng"
 languageCode = "en-US"
+theme = "hello-friend-ng"
+
 paginate = 7
-disqusShortname = "atmosmps"
-rssLimit = 10  # Maximum number of items in the RSS feed.
+rssLimit = 7  # Maximum number of items in the RSS feed.
 copyright = "This work is licensed under a Creative Commons Attribution-NonCommercial 4.0 International License." # This message is only used by the RSS template.
+
+# googleAnalytics = ""
+disqusShortname = "atmosmps"
+
+disableRSS     = false
+disableSitemap = false
+disable404     = false
 
 [permalinks]
   posts = "/posts/:year/:month/:title/"
@@ -24,23 +31,73 @@ copyright = "This work is licensed under a Creative Commons Attribution-NonComme
   dateformNum     = "2006-01-02"
   dateformNumTime = "2006-01-02 15:04"
 
-  # Subtitle for home
+  # Metadata mostly used in document's head
+  #
+  description = "Vi veri universum vivus vici."
+  keywords = "#tech #dev #science #astronomy #books #blackmusic #running #chess #poker #guitar"
+  images = [""]
+
+  # Home subtitle of the index page.
+  #
   homeSubtitle = "Vi veri universum vivus vici."
 
   # Set disableReadOtherPosts to true in order to hide the links to other posts.
+  #
   disableReadOtherPosts = false
 
-  # Enable sharing buttons, if you linke
+  # Global language menu
+  #
+  # Enables the global language menu.
+  #
+  enableGlobalLanguageMenu = true
+
+  # Sharing buttons
+  #
+  # There are a lot of buttons preconfigured. If you want to change them,
+  # generate the buttons here: https://sharingbuttons.io
+  # and add them into your own `layouts/partials/sharing-buttons.html`
+  #
   enableSharingButtons = true
 
-  # Metadata mostly used in document's head
-  description = "Vi veri universum vivus vici."
-  keywords = "#tech #dev #science #astronomy #books #blackmusic #running #chess #poker #guitar"
-  #images = [""]
+  # Custom footer 
+  # If you want, you can easily override the default footer with your own content. 
+  #
+  [params.footer]
+    trademark = true
+    rss = true
+    copyright = true
+    author = true
 
-  # Default theme "light" or "dark"
-  defaultTheme = "dark"
-  #themeColor = "#252627"
+    topText = []
+    bottomText = [
+      "Powered by <a href=\"http://gohugo.io\">Hugo</a>",
+      "Made with &#10084; by <a href=\"https://github.com/rhazdon\">Djordje Atlialp</a>"
+    ]
+
+  # Colors for favicons
+  #
+  [params.favicon.color]
+    mask = "#1b1c1d"
+    msapplication = "#1b1c1d"
+    theme = "#1b1c1d"
+  
+  [params.logo]
+    logoMark     = ">"
+    logoText     = "$ cd /home/"
+    logoHomeLink = "/"
+    # Set true to remove the logo cursor entirely.
+    # logoCursorDisabled = false
+    # Set to a valid CSS color to change the cursor in the logo.
+    # logoCursorColor    = "#67a2c9"
+    # Set to a valid CSS time value to change the animation duration, "0s" to disable.
+    # logoCursorAnimate  = "2s"
+
+  # Uncomment this if you want a portrait on your start page
+  #
+  # [params.portrait]
+  #   path     = "/img/image.jpg"
+  #   alt      = "Portrait"
+  #   maxWidth = "50px"
 
   # Social icons
   [[params.social]]
@@ -48,28 +105,18 @@ copyright = "This work is licensed under a Creative Commons Attribution-NonComme
     url  = "https://github.com/atmosmps/"
 
   [[params.social]]
-    name = "gitlab"
-    url = "https://gitlab.com/atmosmps/"
-
-  [[params.social]]
-    name = "twitter"
-    url  = "https://twitter.com/atmosmps/"
-
-  [[params.social]]
     name = "linkedin"
     url  = "https://www.linkedin.com/in/atmosmps/"
 
+  [[params.social]]
+    name = "instagram"
+    url  = "https://www.instagram.com/atmosmps/"
+
 [languages]
   [languages.en]
-    title = "Atmos Maciel"
     subtitle = "Vi veri universum vivus vici."
-    #keywords = ""
+    weight    = 1
     copyright = '<a href="https://creativecommons.org/licenses/by-nc/4.0/" target="_blank" rel="noopener">CC BY-NC 4.0</a>'
-    readOtherPosts = "Read other posts"
-
-    [languages.en.params.logo]
-      logoText = "/atmosmps"
-      logoHomeLink = "/"
 
 # And you can even create generic menu
 [menu]
