--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,10 @@
 baseurl = "/"
 title = "Atmos Maciel"
-languageCode = "en-US"
+languageCode = "pt-br"
 theme = "hello-friend-ng"
+
+# PygmentsCodeFences = true
+# PygmentsStyle = "monokai"
 
 paginate = 7
 rssLimit = 7  # Maximum number of items in the RSS feed.
@@ -10,15 +13,34 @@ copyright = "This work is licensed under a Creative Commons Attribution-NonComme
 # googleAnalytics = ""
 disqusShortname = "atmosmps"
 
+archetypeDir = "archetypes"
+contentDir   = "content"
+dataDir      = "data"
+layoutDir    = "layouts"
+publishDir   = "public"
+
+buildDrafts  = false
+buildFuture  = false
+buildExpired = false
+canonifyURLs = true
+
+enableRobotsTXT = true
+enableGitInfo   = false
+enableEmoji     = true
+enableMissingTranslationPlaceholders = false
 disableRSS     = false
 disableSitemap = false
 disable404     = false
+disableHugoGeneratorInject = false
 
 [permalinks]
   posts = "/posts/:year/:month/:title/"
 
 [author]
   name = "Atmos Maciel"
+
+[blackfriday]
+  hrefTargetBlank = true
 
 [taxonomies]
   tag      = "tags"
@@ -41,15 +63,24 @@ disable404     = false
   #
   homeSubtitle = "Vi veri universum vivus vici."
 
+  # Set a background for the homepage
+  # backgroundImage = "assets/images/background.jpg"
+
+  # Prefix of link to the git commit detail page. GitInfo must be enabled.
+  #
+  # gitUrl = ""
+
   # Set disableReadOtherPosts to true in order to hide the links to other posts.
   #
   disableReadOtherPosts = false
 
-  # Global language menu
-  #
-  # Enables the global language menu.
-  #
-  enableGlobalLanguageMenu = true
+  # Enable theme toggle
+  # 
+  # This options enables the theme toggle for the theme. 
+  # Per default, this option is off. 
+  # The theme is respecting the prefers-color-scheme of the operating systeme. 
+  # With this option on, the page user is able to set the scheme he wants. 
+  enableThemeToggle = true
 
   # Sharing buttons
   #
@@ -58,6 +89,22 @@ disable404     = false
   # and add them into your own `layouts/partials/sharing-buttons.html`
   #
   enableSharingButtons = true
+
+  # Global language menu
+  #
+  # Enables the global language menu.
+  #
+  enableGlobalLanguageMenu = true
+
+  # Integrate Javascript files or stylesheets by adding the url to the external assets or by
+  # linking local files with their path relative to the static folder, e.g. "css/styles.css"
+  #
+  customCSS = []
+  customJS  = []
+
+  # Toggle this option need to rebuild SCSS, requires extended version of Hugo
+  #
+  justifyContent = false  # Set "text-align: justify" to .post-content.
 
   # Custom footer 
   # If you want, you can easily override the default footer with your own content. 
@@ -80,24 +127,24 @@ disable404     = false
     mask = "#1b1c1d"
     msapplication = "#1b1c1d"
     theme = "#1b1c1d"
-  
+
   [params.logo]
     logoMark     = ">"
-    logoText     = "$ cd /home/"
+    logoText     = "$ /atmosmps"
     logoHomeLink = "/"
     # Set true to remove the logo cursor entirely.
     # logoCursorDisabled = false
     # Set to a valid CSS color to change the cursor in the logo.
-    # logoCursorColor    = "#67a2c9"
+    logoCursorColor    = "#1B9886"
     # Set to a valid CSS time value to change the animation duration, "0s" to disable.
-    # logoCursorAnimate  = "2s"
+    logoCursorAnimate  = "1s"
 
   # Uncomment this if you want a portrait on your start page
   #
-  # [params.portrait]
-  #   path     = "/img/image.jpg"
-  #   alt      = "Portrait"
-  #   maxWidth = "50px"
+  [params.portrait]
+    path     = "/img/logo.png"
+    alt      = "Portrait Logo"
+    maxWidth = "150px"
 
   # Social icons
   [[params.social]]
@@ -114,21 +161,25 @@ disable404     = false
 
 [languages]
   [languages.en]
-    subtitle = "Vi veri universum vivus vici."
+    subtitle  = "Vi veri universum vivus vici."
     weight    = 1
     copyright = '<a href="https://creativecommons.org/licenses/by-nc/4.0/" target="_blank" rel="noopener">CC BY-NC 4.0</a>'
 
+    [[menu.main]]
+      identifier = "about"
+      name       = "About"
+      url        = "about/"
+    [[menu.main]]
+      identifier = "posts"
+      name       = "Posts"
+      url        = "posts/"
+
 # And you can even create generic menu
-[menu]
-  [[menu.main]]
-    identifier = "about"
-    name       = "About"
-    url        = "about/"
-  [[menu.main]]
-    identifier = "posts"
-    name       = "Posts"
-    url        = "posts/"
-  #[[menu.main]]
-  #  identifier = "projects"
-  #  name       = "Projects"
-  #  url        = "projects/"
+# [[menu.main]]
+#   identifier = "blog"
+#   name       = "Blog"
+#   url        = "/posts"
+# [[menu.main]]
+#   identifier = "projects"
+#   name       = "Projects"
+#   url        = "projects/"
